# Cluster-chat-server

./: CMakeLists.txt  README.md
include/: public.hpp
include/net/: Acceptor.h  Buffer.h  Callbacks.h  Channel.h  CurrentThread.h  EpollPoller.h  EventLoop.h  EventLoopThread.h  EventLoopThreadPool.h  InetAddress.h  Logger.h  Poller.h  Socket.h  TcpConnection.h  TcpServer.h  Thread.h  Timestamp.h  noncopyable.h
include/server/: chatServer.hpp  chatService.hpp
include/server/db/: db.hpp
include/server/model/: friendModel.hpp  group.hpp  groupModel.hpp  groupUser.hpp  offlineMessageModel.hpp  user.hpp  userModel.hpp
src/client/: main.cc
src/net/: Acceptor.cc  Buffer.cc  Channel.cc  CurrentThread.cc  DefaultPoller.cc  EpollPoller.cc  EventLoop.cc  EventLoopThread.cc  EventLoopThreadPool.cc  InetAddress.cc  Logger.cc  Poller.cc  Socket.cc  TcpConnection.cc  TcpServer.cc  Thread.cc  Timestamp.cc
src/server/: CMakeLists.txt  chatServer.cc  chatService.cc  main.cc
src/server/db/: db.cc
src/server/model/: friendModel.cc  groupModel.cc  offlineMessageModel.cc  userModel.cc
src/server/redis/: redis.cc
testJson/: testJosn.cc
